--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,53 @@
+/* * { border: 1px solid black; } */
+
+body {
+    margin: 0;
+    font-family: "Roboto";
+}
+
+
+button {
+    background-color: #3882f6;
+    color: #E5E7EB;
+    border-radius: 25px;
+    padding: 7px 30px;
+}
+
 a { 
     color: inherit; 
 } 
 
 ul {
     list-style-type: none;
+}
+
+.header-logo {
+    font-size: 24px;
+    color: #F9FAF8;
+}
+
+.hero-text {
+    display:flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items: flex-start;
+}
+
+.bold-hero-text {
+    font-size: 48px;
+    font-weight: 900;
+    color: #F9FAF8;
+}
+
+.hero-subtext {
+    font-size: 18px;
+    color: #E5E7EB
+}
+
+.first-part {
+    background-color: #1F2937;
+    padding: 0 22vh;
+    padding-bottom: 10vh;
 }
 
 .header {
@@ -16,4 +60,68 @@ ul {
     display: flex;
     gap: 1rem;
     justify-content: flex-end;
+}
+
+.hero {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+    margin-top: 8vh;
+}
+
+.hero > * {
+    flex: 1 1 0;
+}
+
+.hero-image {
+    display: flex;
+    justify-content: center;
+    background-image: url("./images/kanye-pork.jpeg");
+    background-size: cover;
+}
+
+.picture-rack {
+    display: flex;
+    justify-content: center;
+    gap: 8px;
+}
+
+.actual-picture {
+    background-image: url("./images/barberry.png");
+}
+
+.subheading {
+    padding: 20px;
+    text-align: center;
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: 900;
+}
+
+.image-subtext {
+    text-align: center;
+}
+
+.random-info {
+    margin-top: 5vh;
+}
+
+.quote {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.actual-quote {
+    font-size: 36px;
+    font-weight: 300;
+    font-style: italic;
+    width: 60vw;
+}
+
+.author {
+    align-self: flex-end;
+    font-weight: 900;
+    font-size: 22px;
 }
